--- a/src/templates/videoList.html
+++ b/src/templates/videoList.html
@@ -1,7 +1,10 @@
 <ul class="video-list">
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
+  <video-list-entry     
+    videos="$ctrl.videos"
+    item="video"
+    index="$index" 
+    ng-repeat="video in $ctrl.videos track by $index"
+    title-click="$ctrl.titleClick"
+  >
+  </video-list-entry>
 </ul>
