--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -1,6 +1,12 @@
 <div class="search-bar form-inline">
-  <input class="form-control" type="text" />
-  <button class="btn">
+  <input 
+    class="form-control" 
+    type="text"
+    ng-model="$ctrl.newSearch"
+    ng-model-options="{debounce: 500}"
+    ng-change="$ctrl.search($ctrl.newSearch)" 
+  />
+  <button ng-click="$ctrl.search($ctrl.newSearch)" class="btn">
     <span class="glyphicon glyphicon-search"></span>
   </button>
 </div>
