--- a/src/templates/videoListEntry.html
+++ b/src/templates/videoListEntry.html
@@ -1,6 +1,7 @@
 <li class="video-list-entry media">
   <div class="media-left">
-    <img class="media-object" ng-src={{$ctrl.item.snippet.thumbnails.default.url}} />
+    <img class="media-object" 
+      ng-src={{$ctrl.item.snippet.thumbnails.default.url}} />
   </div>
   <div class="media-body">
     <div class="video-list-entry-title" ng-click="$ctrl.titleClick($ctrl.index)" >{{$ctrl.item.snippet.title}}</div>
